// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`convert br tags to paragraphs 1`] = `"<p>line 1</p><p data-spacing=\\"single\\">line 2</p>"`;

exports[`convert br tags to paragraphs 2`] = `"<p>line <em>1</em></p><p data-spacing=\\"single\\"><em>line</em> 2</p>"`;

exports[`convert br tags to paragraphs 3`] = `"<p>line <span><em>1</em></span></p><p data-spacing=\\"single\\"><span><em>line</em></span> 2</p>"`;

exports[`convert br tags to paragraphs 4`] = `"<p>line <span><em>1</em></span></p><p data-spacing=\\"single\\"><span><em>line</em></span> 2</p>"`;

exports[`convert br tags to paragraphs 5`] = `"<p></p>"`;

exports[`convert br tags to paragraphs 6`] = `
"<!--StartFragment--><p data-spacing=\\"single\\">A troll, they call me, but I have no wish
</p><p data-spacing=\\"single\\">
to be associated with those dolls</p><p data-spacing=\\"single\\">
</p><p data-spacing=\\"single\\">
We lack religion, purpose, politics,</p><p data-spacing=\\"single\\">
and yet, we somehow manage to get by.</p>"
`;

exports[`convert br tags to paragraphs 7`] = `
"<!--StartFragment--><p dir=\\"auto\\">When I try to paste something (e.g. email content) to a note, the styling is kept, which is good, but the newlines are removed.</p><p data-spacing=\\"single\\">
    Also when I share the selection to Notesnook via the share functionality from Android, I have the same issue.</p>
    <hr>
    <p dir=\\"auto\\"><strong>Device information:</strong></p><p data-spacing=\\"single\\">
    App version: 2.3.0</p><p data-spacing=\\"single\\">
    Platform: android</p><p data-spacing=\\"single\\">
    Model: OnePlus-CPH2409-31</p><p data-spacing=\\"single\\">
    Pro: true</p><p data-spacing=\\"single\\">
    Logged in: yes</p><!--EndFragment-->"
`;

exports[`convert br tags to paragraphs 8`] = `
"<!--StartFragment--><span class=\\"css-901oao css-16my406 r-poiln3 r-bcqeeo r-qvutc0\\">Why switch from Gmail? 

    Not sacrificing features for more privacy, prefer using one app, in many public groups and channels (Telegram)
    
    LibreOffice Slow &amp; buggy
    
    Switched to Brave for the better Android app, more private out of the box &amp; unsure if uBlock Origin closes gap</span><!--EndFragment-->"
`;

exports[`convert br tags to paragraphs 9`] = `
"<div>
  <p style=\\"line-height: 100%; margin-bottom: 0in\\">
  I am not talk9ing to you</p>
  <p style=\\"line-height: 100%; margin-bottom: 0in\\"></p>
  <p style=\\"line-height: 100%; margin-bottom: 0in\\">I am not talk9ing to
  you</p>
  
  </div>"
`;

exports[`convert br tags to paragraphs 10`] = `
"<div>
  <p style=\\"line-height: 100%; margin-bottom: 0in\\">
  I am not talking to you</p><p data-spacing=\\"single\\">
  </p>
  <p>I am talking to you</p>
  </div>"
`;

exports[`convert br tags to paragraphs 11`] = `
"<div>
    <!--StartFragment--><p><span>Hello</span></p><p data-spacing=\\"single\\"></p><p data-spacing=\\"single\\"></p><p data-spacing=\\"single\\"></p><p data-spacing=\\"single\\"></p><p data-spacing=\\"single\\"></p><p data-spacing=\\"single\\"><span>world</span></p><!--EndFragment-->
    
    </div>"
`;

exports[`convert br tags to paragraphs 12`] = `
"<div>
    <!--StartFragment--><meta charset=\\"utf-8\\"><h1><span>Write notes</span></h1><p data-spacing=\\"single\\"></p><p dir=\\"ltr\\" data-spacing=\\"single\\"><span>Welcome of </span><a><span>Notesnook</span></a><span>, an syncing.</span></p><p data-spacing=\\"single\\"></p><p dir=\\"ltr\\" data-spacing=\\"single\\"><span>Enjoy the read!</span></p><p data-spacing=\\"single\\"></p><p dir=\\"ltr\\" data-spacing=\\"single\\"><span><span><img></span></span></p><p data-spacing=\\"single\\"></p><p dir=\\"ltr\\" data-spacing=\\"single\\"><span>vision?</span></p><p data-spacing=\\"single\\"></p><p dir=\\"ltr\\" data-spacing=\\"single\\"><span>everyone means</span></p><!--EndFragment-->
    
    </div>"
`;

exports[`properly format codeblocks 1`] = `
"<div>
  <!--StartFragment--><p>Sure! Here's an implementation of a word counter for Thai that considers each syllable consisting of a consonant sound followed by a vowel sound as a word:</p><pre><code>javascript</code></pre><pre class=\\"language-javascript\\"><code>function countThaiWords(text) {
    // define a regular expression to match Thai syllables
    const thaiSyllableRegex = /[&#xe01;-&#xe3a;&#xe40;-&#xe5b;]+[&#xe00;-&#xe7f;]?/g;
  
    // count the number of matches of the Thai syllable regex in the text
    const matches = text.match(thaiSyllableRegex) || [];
    const wordCount = matches.length;
  
    // return the number of words
    return wordCount;
  }
  
  // example usage
  const text = &quot;&#xe2a;&#xe27;&#xe31;&#xe2a;&#xe14;&#xe35;&#xe04;&#xe48;&#xe30;&#xe22;&#xe34;&#xe19;&#xe14;&#xe35;&#xe15;&#xe49;&#xe2d;&#xe19;&#xe23;&#xe31;&#xe1a;&#xe40;&#xe02;&#xe49;&#xe32;&#xe2a;&#xe39;&#xe48;&#xe42;&#xe25;&#xe01;&#xe02;&#xe2d;&#xe07;&#xe09;&#xe31;&#xe19;&quot;;
  const wordCount = countThaiWords(text);
  console.log(\`Word count: &dollar;{wordCount}\`);
  // output: Word count: 9
  </code></pre><p>This implementation defines a regular expression to match Thai syllables, which are composed of one or more Thai characters. It then uses the <code>match</code> function of the <code>String</code> object to count the number of matches of the Thai syllable regex in the input text.</p><p>Note that this implementation assumes that each syllable consisting of a consonant sound followed by a vowel sound is considered a word in Thai. This may not always be accurate, as some words in Thai may consist of multiple syllables, and some syllables may be used as prefixes or suffixes to modify other words. However, this approach should work well for many cases where each syllable is considered a separate word.</p><!--EndFragment-->
  
  </div>"
`;
